# todo_api

./: pyproject.toml
api/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_list_todoitem_list_id.py  0003_alter_todoitem_date_created_and_more.py  0003_remove_todoitem_last_modified_and_more.py  0004_remove_todoitem_started.py
todoapi/: settings.py  urls.py
